syntax = "proto3";

package reviews.v1;

import "google/protobuf/timestamp.proto";
import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "validate/validate.proto";

service ReviewsService {
    rpc CreateReview(CreateReviewRequest) returns (Review);
    rpc ListReviews(ListReviewsRequest) returns (ListReviewsResponse);
}

message CreateReviewRequest {
    string product_id = 1;
    string title = 2 [(validate.rules).string = {min_len: 5, max_len: 15}];
    string body = 3;
    uint32 rating = 4 [(validate.rules).uint32 = {gte:1, lte: 10}];
}

message ListReviewsRequest {
    string product_id = 1;
    int32 page_size = 2;
    string page_token = 3;
}

message ListReviewsResponse {
    repeated Review reviews = 1;
    string next_page_token = 2;
}

message Review {
    string id = 1;
    string product_id = 2;

    google.protobuf.Timestamp create_time = 3;
    google.protobuf.Timestamp update_time = 4;
    google.protobuf.Timestamp delete_time = 5;

    string title = 10;
    string body = 11;
    uint32 rating = 12;
}